# fastapi-blueprint

./: .dockerignore  .env.example  .gitignore  .trivyignore  Dockerfile  LICENSE  Makefile  PRODUCTION_READINESS.md  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
scripts/: entrypoint.sh
src/: main.py
src/adapters/: base_repository.py  cache.py  cache_adapter.py  redis_adapter.py  request_adapter.py  request_cache_adapter.py  role_repository.py  uow.py  user_repository.py
src/api/: router.py
src/api/v1/: auth.py  health.py  protected.py  router.py
src/api/v1/schemas/: auth.py  health.py
src/auth/: __init__.py  dependencies.py  exceptions.py  jwt.py  password.py  schemas.py  token_blacklist.py
src/cache/: redis.py  utils.py
src/core/: __init__.py  logger.py  settings.py
src/core/exceptions/: __init__.py  exceptions.py  handlers.py
src/core/middleware/: __init__.py
src/core/middlewares/: __init__.py  cache.py  logging.py  request_size.py  security.py
src/core/settings/: __init__.py  app.py  auth.py  cache.py  db.py  logging.py
src/db/: db.py
src/dependencies/: adapters.py  auth.py  cache_dependency.py  services.py
src/migrations/: env.py
src/migrations/versions/: 59fb26335db9_add_user_and_role_models.py
src/models/: __init__.py  base.py  role.py  user.py
src/rate_limit/: __init__.py  limiter.py
src/services/: auth_service.py  health_service.py
src/utils/: decorators.py
tests/: conftest.py
tests/test_api/v1/: test_auth.py  test_health.py
tests/test_auth/: test_dependencies.py  test_jwt.py  test_password.py
tests/test_core/: test_settings.py
tests/test_core/test_middlewares/: test_request_size_middleware.py  test_security_middleware.py
