[project]
name = "shpetny-fastapi-blueprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "ruff>=0.14.9",
]
